# TauUtils

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SemVerConstraint.md  TauUtils.sln  TauUtils.vcxproj  TauUtils.vcxproj.filters  conandata.yml  conanfile.py  init.bat  init.sh  premake5.lua  publish.bat
TauUtils/: TauUtils.vcxproj  TauUtils.vcxproj.filters
TauUtils/include/: ArrayList.hpp  Base64.hpp  BitSet.hpp  ConPrinter.hpp  Console.hpp  Dragon4.hpp  DynArray.hpp  Encoding.hpp  EnumBitFields.hpp  EnumBitFields.inl  NumTypes.hpp  ReferenceCounter.hpp  ReferenceCountingPointer.hpp  ReferenceCountingPointer.inl  RunTimeType.hpp  Safeties.hpp  String.hpp  String.inl  String.io.hpp  String.utf16.inl  String.utf8.inl  String.utf8_16.inl  TUMaths.hpp  ToString.hpp  VariableLengthArray.hpp
TauUtils/include/allocator/: FixedBlockAllocator.hpp  FreeListAllocator.hpp  PageAllocator.hpp  SlabAllocator.hpp  TauAllocator.hpp
TauUtils/include/ds/: StreamedAVLTree.hpp
TauUtils/include/json/: JsonTypes.hpp  JsonWriter.hpp
TauUtils/src/: Console.cpp  DefaultTauAllocator.cpp  Dragon4.cpp  Encoding.cpp  PageAllocator.cpp  ReferenceCountingPointer.cpp
TauUtilsDynamic/: CMakeLists.txt
TauUtilsDynamic/include/: Alignment.h  ArrayList.hpp  AtomicIntrinsics.hpp  Base32.hpp  Base64.hpp  BitSet.hpp  CVersion.hpp  ConPrinter.hpp  ConPrinter.string.hpp  Console.hpp  DeBruijn.hpp  Dragon4.hpp  DynArray.hpp  Encoding.hpp  EnumBitFields.hpp  IntToString.hpp  MapIterator.hpp  MathDefines.hpp  NumTypes.hpp  Objects.hpp  PathSanitizer.hpp  ReferenceCounter.hpp  ReferenceCountingPointer.hpp  ReferenceCountingPointer.inl  RunTimeType.hpp  Safeties.hpp  String.CalculateCodeUnits.inl  String.Cast.inl  String.Unicode.inl  String.UnicodeIterator.inl  String.UnicodeTransform.inl  String.hpp  String.inl  String.utf16.inl  String.utf8.inl  String.utf8_16.inl  StringFormat.GlobalHandlers.hpp  StringFormat.hpp  TUConfig.hpp  TUMaths.hpp  (+7 more)
TauUtilsDynamic/include/allocator/: FixedBlockAllocator.hpp  PageAllocator.hpp  PageAllocator.nix.inl  PageAllocator.win32.inl  RingAllocator.hpp  TauAllocator.hpp
TauUtilsDynamic/include/ds/: AVLTree.hpp  HashTable.hpp  RBTree.hpp  StreamedAVLTree.hpp
TauUtilsDynamic/include/json/: JsonWriter.hpp
TauUtilsDynamic/include/semver/: SemVer.hpp  SemVerConstraintAST.hpp  SemVerConstraintAST.inl  SemVerLexer.hpp  SemVerParser.hpp
TauUtilsDynamic/src/: Console.cpp  DefaultTauAllocator.cpp  Dragon4.cpp  Encoding.cpp  PageAllocator.cpp  ReferenceCountingPointer.cpp
TauUtilsStatic/: BuildLlvmIR.props  CMakeLists.txt
TauUtilsStatic/src/: IntMath.ll
TauUtilsTest/: CMakeLists.txt
TauUtilsTest/src/: HashMapTests.cpp  Main.cpp  ReferenceCountingTests.cpp  SemVerParserTests.cpp  SemVerTests.cpp  StringTests.cpp
Testing/: Base64Tests.cpp  CMakeLists.txt  JsonTests.cpp  Main.cpp  ReferenceCountingTests.cpp  Testing.vcxproj  Testing.vcxproj.filters
Testing/src/: Base64Tests.cpp  DragonTests.cpp  JsonTests.cpp  Main.cpp  MathTests.cpp  StringTests.cpp
cmake/: GenVsFilters.cmake  SetCompileFlags.cmake
include/: Alignment.h  ArrayList.hpp  AtomicIntrinsics.hpp  CVersion.hpp  ConPrinter.hpp  DynArray.hpp  Endian.hpp  EnumBitFields.hpp  EnumBitFields.inl  MapIterator.hpp  MathDefines.hpp  NumTypes.hpp  Objects.hpp  ReferenceCountingPointer.hpp  ReferenceCountingPointer.inl  RunTimeType.hpp  Safeties.hpp  String.hpp  String.inl  TUMaths.hpp  Template.hpp  Triplet.hpp  Utils.hpp  VariableLengthArray.hpp
include/allocator/: FixedBlockAllocator.hpp  FreeListAllocator.hpp  PageAllocator.hpp  TauAllocator.hpp
include/ds/: AVLTree.hpp  RBTree.hpp  StreamedAVLTree.hpp
natvis/: BitSet.natvis  DynArray.natvis
scripts/: init.sh  publish.sh  upload.bat  upload.sh
src/: PageAllocator.cpp
test_package/: CMakeLists.txt  Testing.vcxproj  Testing.vcxproj.filters  conanfile.py  conanfile.py.dis
test_package/src/: DragonTests.cpp  Main.cpp
